# mesh2brick

./: .gitignore  LICENSE  README.md  mesh2brick_objaverse.py  pyproject.toml
src/mesh2brick/: __main__.py  mesh2brick.py  mesh_deformation.py  mesh_utils.py  planning.py  slope_detection.py  slope_tiling.py  voxel2brick.py
src/mesh2brick/data/: brick_library.json  brick_library.py  brick_structure.py  slope_library.json
src/mesh2brick/slopes/: __init__.py  deformation.py  detection.py  prepare_slopes.py  tiling.py  utils.py
src/mesh2brick/stability_analysis/: stability_analysis.py  utils.py
tests/: test_brick_structure.py  test_mesh_deformation.py  test_slope_detection.py  test_stability.py
